fix overflowing names

--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,7 @@ button:hover {
   border-radius: 999px;
   font-size: 1.5vw;
   font-weight: bold;
+  overflow: hidden;
 }
 
 /* bottom bar */
